css/main.css
/* ... */
#bgPics1 {
	animation: shinning 20s infinite 0s;
}
#bgPics2 {
	background-position: 0% -50%;
	animation: shinning 20s infinite 2s;
}
#bgPics3 {
	background-position: 0% -100%;
	animation: shinning 20s infinite 4s;
}
#bgPics4 {
	background-position: 0% -150%;
	animation: shinning 20s infinite 6s;
}
#bgPics5 {
	background-position: 0% -200%;
	animation: shinning 20s infinite 8s;
}
#bgPics6 {
	background-position: 0% -250%;
	animation: shinning 20s infinite 10s;
}
#bgPics7 {
	background-position: 0% -300%;
	animation: shinning 20s infinite 12s;
}
#bgPics8 {
	background-position: 0% -350%;
	animation: shinning 20s infinite 14s;
}
#bgPics9 {
	background-position: 0% -400%;
	animation: shinning 20s infinite 16s;
}
#bgPics10 {
	background-position: 0% -450%;
	animation: shinning 20s infinite 18s;
}

@keyframes shinning {
    0%{ opacity: 0; }
    10%{ opacity: 1; }
    20%{ opacity: 1; }
    30%{ opacity: 0; }
    100%{ opacity: 0; }
}
/* bgdec */
.float-bloon {
	position: absolute;
}
#bloonA {
	margin-top: -120px;
}
#bloonB {
	margin-top: -200px;
	margin-left: -100px;
}
#hugLine {
	margin-bottom: -10px;
}

/* color */
.t-white {
	color: #fff;
}
.t-orange {
	color: #f7aa1e;
}
.t-deepblue {
	color: #001644;
}
.t-lightgray {
	color: #e6e6e6;
}
.t-yellow {
	color: #ffc621;
}
.t-shadow {
	text-shadow: 0 0 2px rgba(0, 0, 0, 0.35);
}

/* text */
a {
	text-decoration: none;
	color: inherit;
}
a, button, details {
	-webkit-tap-highlight-color: transparent;
}
a, button, input[type="submit"], details {
	cursor: pointer;
}
p {
	font-family: 'Arial', 'Noto Sans CJK TC', 'PingFang TC', 'Heiti TC', 'Noto Sans TC', source-han-sans-traditional, 'Microsoft JhengHei', sans-serif;
	line-height: 1.5;
    font-weight: 300;
}
p + p {
	margin-top: 0.7em;
}
.t-white p, p.t-white {
	font-weight: 300;
}
h2 {
	line-height: 1.5;
	font-weight: 300;
}
hr {
	width: 100%;
    border: 0;
    border-top: 1px solid;
}
.lh13 {
	line-height: 1.3;
}
.lh15 {
	line-height: 1.5;
}
.lh18 {
	line-height: 1.8;
}
.lh20 {
	line-height: 2.0;
}
.t-underline {
	text-decoration: underline;
}
.t-center {
	text-align: center;
}
.t-left {
	text-align: left;
}
.t-right {
	text-align: right;
}
.t-justify {
	text-align: justify;
}
.bold {
	font-weight: 700;
}
.t-llg {
	font-size: 28px;
}
.t-lg {
	font-size: 24px;
}
.t-midlg {
	font-size: 22px;
}
.t-mid {
	font-size: 18px;
}
.t-midsm {
	font-size: 16px;
}
.t-sm {
	font-size: 14px;
}
.t-ssm {
	font-size: 12px;
}
.quota {
	position: relative;
	display: inline-block;
	line-height: 1.8;
}
.quota::before, .quota::after {
	content: '「';
	display: block;
	position: absolute;
	font-size: 1.5em;
}
.quota::before {
	top: -0.4em;
	left: -1.2em;
}
.quota::after {
	content: '」';
	bottom: -0.4em;
	right: -1em;
}
.quota-left {
	margin-left: 0.9em;
}
/* media */
img {
	max-width: 100%;
	width: auto;
	height: auto;
}
.video-wrapper {
	padding-top: 56.25%;
	position: relative;
	margin-bottom: 5px;
}
.video-wrapper iframe {
	position: absolute;
	top: 0;
	width: 100%;
	height: 100%;
}

/* card-pic */
.card-pic {
	position: relative;
	height: 500px;
	width: 100%;
	flex-grow: 1;
	z-index: 1;
	display: flex;
	justify-content: center;
	align-items: center;
	background-color: #000;
}
.card-bgimg {
	position: relative;
	width: 50%;
	height: 100%;
	z-index: -10;
	overflow: hidden;
	text-align: right;
}
.imgblack {
	position: relative;
	display: inline-block;
	width: auto;
	height: 100%;
}
.imgblack::before {
	content: '';
	position: absolute;
	display: inline-block;
	width: 100%;
	height: 100%;
	background-image: linear-gradient(to left, rgba(0, 0, 0, 0) 80%, rgba(0, 0, 0, 1) 100%), linear-gradient(to right, rgba(0, 0, 0, 0) 80%, rgba(0, 0, 0, 1) 100%);
	z-index: 0;
	top: 0;
	left: 0;
}
.card-bgimg img {
	height: 100%;
	width: auto;
}
.card-text {
	width: 50%;
	padding: 30px;
}
/* single-full-slider */
.single-full-slider {
}
/* card-purpose */
.card-purpose {
	display: inline-block;
	position: relative;
	text-align: center;
	background: linear-gradient(rgba(255, 242, 187, 1), rgba(255, 255, 255, 1) 100%);
	color: #001644;
	width: 200px;
	max-width: 200px;
	height: 200px;
	padding: 18px;
	border-radius: 30px;
	border: 2px solid #fff;
	margin: 10px;
	font-size: 20px;
	font-weight: 600;
	cursor: pointer;
}
.card-purpose svg {
	fill: #001644;
}
.card-purpose::before {
	content: '';
	display: block;
	position: absolute;
	top: -4px;
	left: -4px;
	width: 200px;
	height: 200px;
	border-radius: 32px;
	border: 2px solid #001644;
}
.card-purpose.lighted {
	background: linear-gradient(rgba(247, 170, 30, 1), rgba(247, 125, 30, 1) 100%);
	color: #fff;
}
.card-purpose .svg {
	margin: 0 auto;
	width: 130px;
	height: 130px;
}
.card-purpose.lighted svg {
	fill: #fff;
}
.card-back {
	transform-style: preserve-3d;
  	transition: all 1s ease-in-out;
	position: absolute;
	top: 0;
	left: 0;
	width: 100%;
	height: 100%;
	display: flex;
	align-items: center;
	justify-content: center;
	flex-direction: column;
	padding: 16px;
	border-radius: 30px;
	color: #fff;
	opacity: 0;
	background: linear-gradient(rgba(0, 41, 112, 1), rgba(0, 22, 68, 1) 100%);
  	transition: all 0.4s ease-in-out;
}
.card-back::after {
	content: '';
	width: 100%;
	height: 100%;
	display: block;
}
.card-purpose:hover .card-back, .card-purpose:focus .card-back {
    opacity: 1;
}
.card-purpose::after {
	content: '';
	display: block;
	position: absolute;
	width: 2px;
	height: 1.5em;
	background-image: linear-gradient(to bottom, #001614 60%, rgba(255, 255, 255, 0) 0%);
	background-position: left;
	background-size: 2px 10px;
	background-repeat: repeat-y;
	left: 0;
	right: 0;
	bottom: -1.6em;
	margin: auto;
	z-index: 0;
}

.slider-item:nth-of-type(n + 4) .card-purpose::after {
	bottom: auto;
	top: -1.5em;
	z-index: 0;
}


/* slider */
.slick-slider {
	position: relative;
	overflow: hidden;
	padding-top: 70px;
}
.slider-item {
	display: inline-block;
}
.slick-arrow, .slick-dots {
	position: absolute;
}
/* ... */

